se implemento un bracket para el tipo Torneo Eliminatoria Simple